Fix 2-column layout: remove whitespace between queue and browser
Amp-Thread-ID: https://ampcode.com/threads/T-019c38d0-c592-730b-8de0-9a766e0e70ed

--- a/player.css
+++ b/player.css
@@ -23,6 +23,7 @@ body { margin: 10px; }
   }
   .middle-column, .right-column {
     grid-column: 2;
+    align-self: start;
   }
 }
 
